Sidan form ejsFil

--- a/views/checkMail.ejs
+++ b/views/checkMail.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=di, initial-scale=1.0">
     <title>Bock Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/login.css">
+    <link rel="stylesheet" href="/stylesheets/checkEmail.css">
     <link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
 </head>
 <body>
@@ -37,25 +37,8 @@
                 </div>
     </div>
     <div class="main">
-        <div class="grid-container2">
-        <div class="grid-item3">
-            <img src="../img/06critics-list1-superJumbo.jpg" style="width: 100%;"/>
-        </div>
-        <div class="grid-item4">
-            <form action="/login" method="POST">
-                <h3>Login</h3>
-                <label for="email">Email</label>
-                <input type="text" name="email" placeholder="Email">
-                <label for="password">Password</label>
-                <input type="password" name="password" placeholder="Password">
-                <button type="submit">Loginin</button>
-                <span>Don't have an account?</span>
-                <a href="/register">Sing up</a>
-                <a href="/reset">Forget password?</a>
-                <img src="../img/3001965.jpg" alt="annons">
-                </form>
-        </div>
-    </div>
+        <h3>Sent Email</h3>
+       <p>Please check your email for a link to chenge your code. If you didn't get the email,<a href="/reset">Resend</a>.</p> 
     </div>
     <footer>
         <ul>
