--- a/views/bookForm.ejs
+++ b/views/bookForm.ejs
@@ -11,7 +11,7 @@
         <img src="../img/06critics-list1-superJumbo.jpg">
         <div>
         <h1>Lägg till bok</h1>
-<form action="/addBook" method="post">
+<form action="/addBook" method="post" enctype="multipart/form-data">
 
     <input type="file" name="imageurl" accept="image/png, image/jpeg">
     <input type="text" name="name" id="">
