--- a/views/showBooks.ejs
+++ b/views/showBooks.ejs
@@ -14,7 +14,7 @@
 <h1>Lista av alla böcker</h1>
 
 
-<%  books.forEach( course => { %>
+<%  books.forEach( book => { %>
     <div>
         <%= book.image %>
     </div>
