Add single book/product page

--- a/views/showBooks.ejs
+++ b/views/showBooks.ejs
@@ -24,7 +24,7 @@
     <div>
         <%= book.price %>
     </div>
-    <a href="/addToCart/<%=book.id%>">Add to Cart</a>
+    <a href="/showBook/<%=book._id%>">Visa bok</a>
  <%  }) %>
 
 </body>
