--- a/views/showBookUser.ejs
+++ b/views/showBookUser.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=di, initial-scale=1.0">
     <title>Bock Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/bookForm.css">
+    <link rel="stylesheet" href="/stylesheets/showBookHome.css">
     <link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
 </head>
 <body>
@@ -19,15 +19,14 @@
                 <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                     <path d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                   </svg></a>
-                  <p>Welcome <%= user.name %> 
-                  <a href="/admin">My Page</a>
-                <a href="/logut">Logg out</a></p>
+                  <p>Welcome <%= user.name %></p> 
+                <a href="/logut">Logg out</a>
             </div>
                 <div class="grid-item1"><h1>Böcker</h1></div>
                 <div class="grid-item2">
                     <nav>
                         <ul>
-                            <li><a href="/">HOME</a></li>
+                            <li><a href="/Home">HOME</a></li>
                             <li><a href="blog">BLOG</a></li>
                             <li><a href="shop">SHOP</a></li>
                             <li><a href="contakt">CONTACT US</a></li>
@@ -36,19 +35,66 @@
                 </div>
     </div>
     <div class="main">
-       <div class="bookFormContainer">
-        <h4>Lägg till bok</h4>
-        <form action="/addBook" method="post" enctype="multipart/form-data">
-        <input type="file" name="imageurl" accept="image/png, image/jpeg">
-        <input type="text" name="name" id="bookName" placeholder="Book Name">
-        <input type="text" name="author" id="authorName" placeholder="Author Name">
-        <input type="number" name="price" id="price" placeholder="Price">
-        <input type="text" name="description" id="description" placeholder="Description">
-        <button type="submit">LÄGG TILL</button>
-        </form>
-        </div>  
+        <div class="banner">
+            
+                <img src="../img/2997792.jpg" alt="" srcset="">
+               
+        </div>
+        <div class="hot-sell">
+            <div class="one">
+                <img src="../img/terapeuten-som-inte-visste-vad-han-gjorde_pocket.jpg" alt="" srcset="">
+                <div class="infor-right">
+                <h1>Terapeuten som inte<br>visste vad han gjorde</h1>
+                <p>Max Schüllerqvist</p>
+                <button>Show More</button>
+                </div>
+            </div>
+            <div class="two">
+                <img src="../img/_skyddsangeln.jpg" alt="">
+                <div class="infor-left">
+                <h1>Terapeuten som inte<br>visste vad han gjorde</h1>
+                <p>Max Schüllerqvist</p>
+                <button>Show More</button>
+                </div>
+            </div>
+            <div class="three">
+                <img src="../img/gott-om-tid_pocket.jpg" alt="">
+                <div class="infor-right">
+                <h1>Terapeuten som inte<br>visste vad han gjorde</h1>
+                <p>Max Schüllerqvist</p>
+                <button>Show More</button>
+                </div>
+            </div>
+        </div>
+        <div class="kund-favorit">
+            <h3>New Books</h3>
+            <hr>
+            <div class="box">
+                <%  books.forEach( book => { %>
+                    <div class="bookInfor">
+                    <img src="<%= book.image %>" alt="<%= book.image %>"">
+                    <p><%= book.name %></p>
+                    <h5><%= book.price %></h5>
+                    <a href="/addToCart/<%=book.id%>">Show More</a>
+                    </div>
+                 <%  }) %>
+            </div>
+        </div>
+        
+        
     </div>
-    
+    <footer>
+        <ul>
+            <li>© 2021 Bokus AB</li>
+            <li>Org.nr 556493-0492</li>
+            <li>Sidan använder cookies</li>
+            <li>Behandling av personuppgifter</li>
+            <li>Avtalsvillkor</li>
+        </ul>
+
+            </div>
+        </div>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
