--- a/views/singleBook.ejs
+++ b/views/singleBook.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=di, initial-scale=1.0">
     <title>Bock Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/bookForm.css">
+    <link rel="stylesheet" href="/stylesheets/singleBook.css">
     <link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
 </head>
 <body>
@@ -19,9 +19,10 @@
                 <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                     <path d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                   </svg></a>
-                  <p>Welcome <%= user.name %> 
-                  <a href="/admin">My Page</a>
-                <a href="/logut">Logg out</a></p>
+                <a href="/login"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                  </svg></a>
             </div>
                 <div class="grid-item1"><h1>Böcker</h1></div>
                 <div class="grid-item2">
@@ -36,19 +37,39 @@
                 </div>
     </div>
     <div class="main">
-       <div class="bookFormContainer">
-        <h4>Lägg till bok</h4>
-        <form action="/addBook" method="post" enctype="multipart/form-data">
-        <input type="file" name="imageurl" accept="image/png, image/jpeg">
-        <input type="text" name="name" id="bookName" placeholder="Book Name">
-        <input type="text" name="author" id="authorName" placeholder="Author Name">
-        <input type="number" name="price" id="price" placeholder="Price">
-        <input type="text" name="description" id="description" placeholder="Description">
-        <button type="submit">LÄGG TILL</button>
-        </form>
-        </div>  
+        <div class="boken">
+            <div class="imag">
+                <img src="<%= book.image %>" alt="<%= book.name %>">
+                
+            </div>
+            <div class="information">
+                <h1><%= book.name %></h1>
+                <h6></h6>
+                <h6><%= book.price %> :-</h6>
+                <button>-</button>
+                <input type="number">
+                <button>+</button>
+                <button>buy</button>
+                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                    <path d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                  </svg></a>
+                <div class="description"><%= book.description %></div>
+            </div>
+            <div class="annons"></div>
+        </div>
     </div>
-    
+    <footer>
+        <ul>
+            <li>© 2021 Bokus AB</li>
+            <li>Org.nr 556493-0492</li>
+            <li>Sidan använder cookies</li>
+            <li>Behandling av personuppgifter</li>
+            <li>Avtalsvillkor</li>
+        </ul>
+
+            </div>
+        </div>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
