--- a/public/stylesheets/showBooks.css
+++ b/public/stylesheets/showBooks.css
@@ -21,7 +21,10 @@
         margin: 0 2% 0 2%;
         justify-content: space-around;
     }
-    
+    .person{
+        background-color: gray;
+        width: 120px;
+    }
     .grid-item1{
         grid-area: 2/3/2/3;
         font-family: 'Akaya Telivigala';
@@ -77,6 +80,10 @@
         background-image: url("../img/Skarmbild\ 2021-03-10\ 154829.png");
         display: grid;
         background-position: center;
+        background-repeat: no-repeat;
+    }
+    .bk-color{
+        background-color: rgb(252, 228, 13);
     }
     .two{
         background-color: #e4e4e4;
@@ -132,9 +139,11 @@
         margin: 0 auto 0 auto;
     }
     .box{
+        flex-direction: row;
         display: flex;
-        height: 300px;
-        margin-left: 20%;
+        margin:2% auto 0 auto;
+        flex-wrap: wrap;
+        width: 800px;
         
     }
     .bookInfor img{
@@ -146,6 +155,11 @@
         width: 150px;
         text-align: center;
         margin: 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
     }
     .bookInfor p{
         font-size: 0.8rem;
@@ -154,7 +168,7 @@
     .bookInfor a{
         background-color: #e98326;
         width: 100px;
-        height: 50px;
+        height: 30px;
         padding: 5px;
         color: white;
         text-decoration: none;
