--- a/public/stylesheets/singleBook.css
+++ b/public/stylesheets/singleBook.css
@@ -57,13 +57,31 @@
     .boken{
         width: 60%;
         margin: 0 auto 0 auto;
-        display: flex;
+        display: grid;
     }
     .imag{
         width: 20%;
-        
+        grid-area: 1/1/1/1;
+        margin: 5% 0 0 3%;
     }
-
+    .information{
+        grid-area: 1/2/3/3;
+        display: flex;
+        flex-direction: column;
+        margin: 3% 0 3% 3%;
+    }
+    .information > div{
+        margin-top: 2%;
+    }
+    .annons{
+        grid-area: 3/1/4/4;
+        margin-bottom: 3%;
+    }
+    .buy{
+        width: 150px;
+        background-color: #e98326;
+        color: white;
+    }
     footer{
         background-color: #e4e4e4;
     }
