Fix author name and slight edit of pagination

--- a/views/adminPage.ejs
+++ b/views/adminPage.ejs
@@ -24,7 +24,7 @@
           <label for="name">Add name</label>
           <input type="text" name="name" id="" value="<%= book.name %>" required placeholder="Product Name">
 
-          <label for="name">Add Author</label>
+          <label for="author">Add Author</label>
           <input type="text" name="author" id="" value="<%= book.author %>" required placeholder="Author Name">
 
           <label for="price">Add price</label>
