--- a/views/shoppingCart.ejs
+++ b/views/shoppingCart.ejs
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping cart</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/shoppingcart.css">
+    <link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
 </head>
 <body>
+    <div class="header">
+        <div class="icon">
+            <a href="/shoppingcart"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+              </svg></a>
+            <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                <path d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+              </svg></a>
+              <p class="person">Welcome <%= user.name %>
+                <a href="/logut">Logg out</a></p>
+        </div>
+            <div class="grid-item1"><h1>Böcker</h1></div>
+            <div class="grid-item2">
+                <nav>
+                    <ul>
+                        <li><a href="/">HOME</a></li>
+                        <li><a href="blog">BLOG</a></li>
+                        <li><a href="shop">SHOP</a></li>
+                        <li><a href="contakt">CONTACT US</a></li>
+                    </ul>
+                </nav>
+            </div>
+</div>
     <div id="shoppingcart">
 <h1>Shopping cart</h1>
 <% if(!shoppingCart.length) { %>
     <p>Shopping cart empty</p>
-    <p><a href="/">Shop here!</a></p>
+    <p><a href="/userHome">Shop here!</a></p>
 <% } else { %>
 
     <% shoppingCart.forEach((book) => { %>
@@ -18,9 +44,37 @@
 <div class="bookincart">
     <img src="<%=book.image%>">
     <p><%=book.name%></p>
+    <p><%= book.author %></p>
+    <p><%= book.price %></p>
 </div>
-</div>
+
 <%})%>
+<button type="submit">Checkout</button>
+
+<script src="https://js.stripe.com/v3/"></script>
+<script>
+    var stripe = Stripe ('pk_test_51IagcmFAWHNsjSWIMv56QBxrTo21mJbM822ApIupMB5Cdqij7tkH2GlJI22xBGwyNTCz9JSexkXshcubMFkJjBOR00V6XqfqbQ')
+    document.querySelector("button").addEventListener("click", ()=>{
+        stripe.redirectToCheckout({sessionId:"<%= sessionId %>"})
+    })
+</script>
 <%}%>
+</div>
+<footer>
+    <ul>
+        <li>© 2021 Bokus AB</li>
+        <li>Org.nr 556493-0492</li>
+        <li>Sidan använder cookies</li>
+        <li>Behandling av personuppgifter</li>
+        <li>Avtalsvillkor</li>
+    </ul>
+
+        </div>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+
 </body>
 </html>
